[gd_scene load_steps=6 format=3 uid="uid://bewsp3ws0tbtg"]

[ext_resource type="Script" path="res://back_of_office.gd" id="1_f4q1s"]
[ext_resource type="Texture2D" uid="uid://bhq45n0wgruiq" path="res://backOffice.png" id="1_ydskt"]
[ext_resource type="Texture2D" uid="uid://c7ll3xslob3wc" path="res://images/hoverArrow.png" id="3_j2nuw"]
[ext_resource type="FontFile" uid="uid://cg3wlrtj3mhgi" path="res://dialouge.ttf" id="4_o1mov"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_rguon"]

[node name="backOfOffice" type="Node2D"]
script = ExtResource("1_f4q1s")

[node name="BackOffice" type="Sprite2D" parent="."]
position = Vector2(574, 323.5)
scale = Vector2(1.125, 0.633789)
texture = ExtResource("1_ydskt")

[node name="HoverArrow" type="Sprite2D" parent="."]
position = Vector2(67, 368)
scale = Vector2(0.324, 0.262)
texture = ExtResource("3_j2nuw")

[node name="cabinetHover1" type="Sprite2D" parent="."]
modulate = Color(0, 0, 0, 1)
position = Vector2(191, 324)
scale = Vector2(-380, 648.762)
texture = SubResource("PlaceholderTexture2D_rguon")

[node name="cabinetHover2" type="Sprite2D" parent="."]
modulate = Color(0, 0, 0, 1)
position = Vector2(578.36, 357)
rotation = 3.14159
scale = Vector2(397.934, -305.192)
texture = SubResource("PlaceholderTexture2D_rguon")

[node name="cabinetHover3" type="Sprite2D" parent="."]
modulate = Color(0, 0, 0, 1)
position = Vector2(960, 324)
rotation = 3.14159
scale = Vector2(380, -648.762)
texture = SubResource("PlaceholderTexture2D_rguon")

[node name="dialogueBox" type="Sprite2D" parent="."]
modulate = Color(0, 0, 0, 1)
position = Vector2(-467, -710)
scale = Vector2(-1019.08, 114.69)
texture = SubResource("PlaceholderTexture2D_rguon")

[node name="RichTextLabel" type="RichTextLabel" parent="."]
offset_left = 113.0
offset_top = 563.0
offset_right = 1085.0
offset_bottom = 610.0
theme_override_colors/default_color = Color(0.960784, 0.960784, 0.960784, 1)
theme_override_fonts/normal_font = ExtResource("4_o1mov")
bbcode_enabled = true
